feat: 메인페이지 섹션1 구현

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ETEVERS Group</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <header>
@@ -53,13 +54,26 @@
           </li>
         </ul>
         <div class="lang_box">
-          <a href="#">KR</a>
+          <a href="#" class="on">KR</a>
           <a href="#">EN</a>
         </div>
       </nav>
       <div class="black_box"></div>
     </header>
-    <main></main>
+    <main>
+      <div class="main_line_con">
+        <div class="main_line"></div>
+      </div>
+      <section class="main_section1">
+        <div class="bg_box"></div>
+        <div class="text_box">
+          <h2>ETEVERS</h2>
+          <h2>GROUP</h2>
+        </div>
+        <div class="scroll_down">SCROLL DOWN</div>
+      </section>
+      <section class="main_section2"></section>
+    </main>
     <footer></footer>
     <script src="./js/common.js"></script>
   </body>
