--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ETEVERS Group</title>
+    <!-- css -->
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <!-- 스크롤 천천히 부드럽게 내리는 라이브러리 -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="http://fatlinesofcode.github.io/jquery.smoothwheel/src/jquery.smoothwheel.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("html").smoothWheel();
+      });
+    </script>
   </head>
   <body>
     <header>
@@ -72,7 +86,20 @@
         </div>
         <div class="scroll_down">SCROLL DOWN</div>
       </section>
-      <section class="main_section2"></section>
+      <section class="main_section2">
+        <div class="top_hand">
+          <img src="./img/main/section2-1.png" alt="hand1" />
+        </div>
+        <div class="text_box">
+          <p class="semi_title">Challenge for</p>
+          <h2 class="title">Transformation</h2>
+          <p class="text">
+            끊임없는 미래 지향적인 발상의 전환으로<br />
+            IT 인프라를 지속적으로 확장해<br />
+            다음 세대를 위한 IT 솔루션과 서비스를 준비합니다.
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./js/common.js"></script>
