feat: 메인페이지 섹션3 구현

--- a/index.html
+++ b/index.html
@@ -98,6 +98,63 @@
           <img src="./img/main/section2-2.png" alt="bottom_hand" />
         </div>
       </section>
+      <section class="main_section3">
+        <div class="bg_box">
+          <img src="./img/main/section3-bg.jpg" alt="section3-bg" />
+        </div>
+        <div class="blur">
+          <div></div>
+        </div>
+        <div class="text_box">
+          <h2 class="title">
+            끊임없이 변화해 온 IT 산업의 중심에서<br />
+            에티버스그룹은 고객과 함께 성장해왔습니다.
+          </h2>
+          <p class="text">
+            에티버스그룹은 신뢰 기반의 공고한 파트너십을 기반으로 고객 사업에
+            가치를 더하는 서비스를 제공하고 있습니다.<br />
+            에티버스그룹은 사업 구조와 시스템을 끊임없이 진화하며 더 나은 미래를
+            향해 나아가겠습니다.
+          </p>
+        </div>
+        <div class="count_box">
+          <ul>
+            <li>
+              <span class="title">설립연도</span>
+              <span class="sub_title">풍부한 시장경험</span>
+              <div>
+                <span class="year">1993</span>
+                <span class="count">년</span>
+              </div>
+            </li>
+            <li>
+              <span class="title">매출</span>
+              <span class="sub_title">안정적 재무구조</span>
+              <div>
+                <span class="year">6,009</span>
+                <span class="count">억</span>
+              </div>
+            </li>
+            <li>
+              <span class="title">파트너사</span>
+              <span class="sub_title">파트너십</span>
+              <div>
+                <span class="year">1,333</span>
+                <span class="count">개</span>
+              </div>
+            </li>
+            <li>
+              <span class="title">직원수</span>
+              <span class="sub_title">IT 전문 인력</span>
+              <div>
+                <span class="year">323</span>
+                <span class="count">명</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="main_section4"></section>
     </main>
     <footer></footer>
     <script src="./js/common.js"></script>
