feat: lenis 스크롤 효과 적용

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script>
       gsap.registerPlugin(ScrollTrigger);
     </script>
+    <!-- lenis -->
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
   </head>
   <body>
     <header>
@@ -154,7 +156,29 @@
           </ul>
         </div>
       </section>
-      <section class="main_section4"></section>
+      <section class="main_section4">
+        <div class="bg_box">
+          <div>
+            <img
+              class="first"
+              src="./img/main/section4-bg1.jpg"
+              alt="section4-bg1"
+            />
+          </div>
+          <div>
+            <img
+              class="second"
+              src="./img/main/section4-bg2.jpg"
+              alt="section4-bg2"
+            />
+          </div>
+        </div>
+        <div class="text_box">
+          <p class="text">ETEVERS GROUP</p>
+          <h2 class="title">Innovation for a</h2>
+          <h2 class="title_fill">Better Tomorrow</h2>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./js/common.js"></script>
