--- a/index.html
+++ b/index.html
@@ -179,6 +179,41 @@
           <h2 class="title_fill">Better Tomorrow</h2>
         </div>
       </section>
+      <section class="main_section5">
+        <div class="bg_box">
+          <img src="./img/main/section5-bg.jpg" alt="section5-bg" />
+        </div>
+        <div class="text_box">
+          <h2 class="sub_title">더 좋은 미래를</h2>
+          <h2 class="title">가능하게 하는 혁신</h2>
+        </div>
+        <div class="right_box">
+          <p class="text">
+            에티버스그룹은 미래 목표 실현을 위해<br />
+            현재의 실질적인 성과와 구체적인 변화를 추구합니다.
+          </p>
+          <p class="semi_text">
+            각 분야에서 지속 가능한 가치를 창조해 나가는 에티버스와 함께 미래를
+            현실로 만들어가는 여정을 함께해 보세요.
+          </p>
+        </div>
+      </section>
+      <section class="main_section6">
+        <div class="bg_box">
+          <img src="./img/main/section6-1.jpg" alt="section6-1" />
+        </div>
+        <div class="center_box">
+          <div class="inner"></div>
+          <div class="text_box">
+            <h2 class="title">에티버스 그룹사</h2>
+            <p class="text">
+              실질적인 사업 DX(디지털 트랜스포메이션)을 이끌어내는<br />
+              통합적인 IT 솔루션과 서비스를 제공하기 위해 전문성과 혁신성을
+              높이고 있습니다.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script src="./js/common.js"></script>
