--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
           </li>
         </ul>
       </section>
-      <section class="main_section8"></section>
+      <section class="main_section8">
+        <div class="text_box"></div>
+      </section>
     </main>
     <footer></footer>
     <!-- JS -->
