--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
     </script>
     <!-- lenis -->
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+    <!-- 질문할것
+     1. 스크롤 중에2 호버해도 안밀리는법 - 헤더
+     2. 섹션6 이미지 반응형 영역 벗어나는 문제 ★★★★★
+     3. 섹션6 이너 움찔
+      -->
   </head>
   <body>
+    <div id="cursor">
+      <img class="fill" src="./img/main/section8-1.png" alt="cursor" />
+      <img class="inner" src="./img/main/section8-2.png" alt="cursor_text" />
+    </div>
     <header>
       <nav class="header_wrap">
         <h1>
@@ -201,25 +210,27 @@
         </div>
       </section>
       <section class="main_section6">
-        <div class="bg_box">
-          <img src="./img/main/section6-1.jpg" alt="section6-1" />
-        </div>
-        <div class="center_box">
-          <div class="inner">
-            <div class="logo_box stroke">
-              <img src="./img/main/section6-2.png" alt="section6-2" />
-            </div>
-            <div class="logo_box fill">
-              <img src="./img/main/section6-3.png" alt="section6-3" />
-            </div>
+        <div class="container">
+          <div class="bg_box">
+            <img src="./img/main/section6-1.jpg" alt="section6-1" />
           </div>
-          <div class="text_box on">
-            <h2 class="title">에티버스 그룹사</h2>
-            <p class="text">
-              실질적인 사업 DX(디지털 트랜스포메이션)을 이끌어내는<br />
-              통합적인 IT 솔루션과 서비스를 제공하기 위해 전문성과 혁신성을
-              높이고 있습니다.
-            </p>
+          <div class="center_box">
+            <div class="inner">
+              <div class="logo_box stroke">
+                <img src="./img/main/section6-2.png" alt="section6-2" />
+              </div>
+              <div class="logo_box fill">
+                <img src="./img/main/section6-3.png" alt="section6-3" />
+              </div>
+            </div>
+            <div class="text_box on">
+              <h2 class="title">에티버스 그룹사</h2>
+              <p class="text">
+                실질적인 사업 DX(디지털 트랜스포메이션)을 이끌어내는<br />
+                통합적인 IT 솔루션과 서비스를 제공하기 위해 전문성과 혁신성을
+                높이고 있습니다.
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -328,10 +339,202 @@
         </ul>
       </section>
       <section class="main_section8">
-        <div class="text_box"></div>
+        <div class="container">
+          <div class="text_box">
+            <h2 class="title">NEWS</h2>
+            <a href="">VIEW MORE</a>
+          </div>
+          <ul class="list">
+            <li>
+              <a class="link" href="#">
+                <div class="top">
+                  <span class="corp-name">㈜에티버스</span
+                  ><span class="date">2024.08.08</span>
+                </div>
+                <h2 class="title">
+                  [에티버스]‘글로벌 AI검색 엔진 기업과 AX 시너지 극대화’
+                  에티버스, 엘라스틱 한국 공식 총판 선정
+                </h2>
+                <p class="text">
+                  - 한국 최초VAD(Value Added Distributor) 총판 선정…국내 고객을
+                  위한 엘라스틱 AI 플랫폼 및 솔루션 공급 - 에티버스-엘라스틱
+                  긴밀한 협업으로 고객의 AI 니즈 및 가치 충족 목표 - “(전문 기술
+                  교육 외에도) 고객 맞춤형 엘라스틱 솔루션 조합 제안 등으로 고객
+                  만족 및 경험 개선 예정” 에티버스 김범수 대표(왼쪽)와 엘라스틱
+                  아시아 태평양 지역 채널 및 제휴 부문 부사장 앤드류
+                  햅굿(오른쪽) 통합 IT 솔루션 및 서비스 기업 에티버스는 AI 검색
+                  기업인 엘라스틱과 신규 파트너십을 체결해 한국 내 첫 번째
+                  VAD(Value Added Distributor) 총판으로 선정됐다고 밝혔다. 이번
+                  파트너십 체결을 통해 에티버스는 한국 전역에 있는 다양한 기관에
+                  검색, 관찰, 보안용 엘라스틱 서치 ...
+                </p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="#">
+                <div class="top">
+                  <span class="corp-name">㈜에티버스</span
+                  ><span class="date">2024.08.08</span>
+                </div>
+                <h2 class="title">
+                  [에티버스]‘글로벌 AI검색 엔진 기업과 AX 시너지 극대화’
+                  에티버스, 엘라스틱 한국 공식 총판 선정
+                </h2>
+                <p class="text">
+                  - 한국 최초VAD(Value Added Distributor) 총판 선정…국내 고객을
+                  위한 엘라스틱 AI 플랫폼 및 솔루션 공급 - 에티버스-엘라스틱
+                  긴밀한 협업으로 고객의 AI 니즈 및 가치 충족 목표 - “(전문 기술
+                  교육 외에도) 고객 맞춤형 엘라스틱 솔루션 조합 제안 등으로 고객
+                  만족 및 경험 개선 예정” 에티버스 김범수 대표(왼쪽)와 엘라스틱
+                  아시아 태평양 지역 채널 및 제휴 부문 부사장 앤드류
+                  햅굿(오른쪽) 통합 IT 솔루션 및 서비스 기업 에티버스는 AI 검색
+                  기업인 엘라스틱과 신규 파트너십을 체결해 한국 내 첫 번째
+                  VAD(Value Added Distributor) 총판으로 선정됐다고 밝혔다. 이번
+                  파트너십 체결을 통해 에티버스는 한국 전역에 있는 다양한 기관에
+                  검색, 관찰, 보안용 엘라스틱 서치 ...
+                </p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="#">
+                <div class="top">
+                  <span class="corp-name">㈜에티버스</span
+                  ><span class="date">2024.08.08</span>
+                </div>
+                <h2 class="title">
+                  [에티버스]‘글로벌 AI검색 엔진 기업과 AX 시너지 극대화’
+                  에티버스, 엘라스틱 한국 공식 총판 선정
+                </h2>
+                <p class="text">
+                  - 한국 최초VAD(Value Added Distributor) 총판 선정…국내 고객을
+                  위한 엘라스틱 AI 플랫폼 및 솔루션 공급 - 에티버스-엘라스틱
+                  긴밀한 협업으로 고객의 AI 니즈 및 가치 충족 목표 - “(전문 기술
+                  교육 외에도) 고객 맞춤형 엘라스틱 솔루션 조합 제안 등으로 고객
+                  만족 및 경험 개선 예정” 에티버스 김범수 대표(왼쪽)와 엘라스틱
+                  아시아 태평양 지역 채널 및 제휴 부문 부사장 앤드류
+                  햅굿(오른쪽) 통합 IT 솔루션 및 서비스 기업 에티버스는 AI 검색
+                  기업인 엘라스틱과 신규 파트너십을 체결해 한국 내 첫 번째
+                  VAD(Value Added Distributor) 총판으로 선정됐다고 밝혔다. 이번
+                  파트너십 체결을 통해 에티버스는 한국 전역에 있는 다양한 기관에
+                  검색, 관찰, 보안용 엘라스틱 서치 ...
+                </p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="#">
+                <div class="top">
+                  <span class="corp-name">㈜에티버스</span
+                  ><span class="date">2024.08.08</span>
+                </div>
+                <h2 class="title">
+                  [에티버스]‘글로벌 AI검색 엔진 기업과 AX 시너지 극대화’
+                  에티버스, 엘라스틱 한국 공식 총판 선정
+                </h2>
+                <p class="text">
+                  - 한국 최초VAD(Value Added Distributor) 총판 선정…국내 고객을
+                  위한 엘라스틱 AI 플랫폼 및 솔루션 공급 - 에티버스-엘라스틱
+                  긴밀한 협업으로 고객의 AI 니즈 및 가치 충족 목표 - “(전문 기술
+                  교육 외에도) 고객 맞춤형 엘라스틱 솔루션 조합 제안 등으로 고객
+                  만족 및 경험 개선 예정” 에티버스 김범수 대표(왼쪽)와 엘라스틱
+                  아시아 태평양 지역 채널 및 제휴 부문 부사장 앤드류
+                  햅굿(오른쪽) 통합 IT 솔루션 및 서비스 기업 에티버스는 AI 검색
+                  기업인 엘라스틱과 신규 파트너십을 체결해 한국 내 첫 번째
+                  VAD(Value Added Distributor) 총판으로 선정됐다고 밝혔다. 이번
+                  파트너십 체결을 통해 에티버스는 한국 전역에 있는 다양한 기관에
+                  검색, 관찰, 보안용 엘라스틱 서치 ...
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="left">
+          <div class="top">
+            <a class="logo_box" href="#">
+              <img src="./img/main/logo.png" alt="logo" />
+            </a>
+            <div class="sns_box">
+              <a href="#">
+                <img
+                  src="./img/main/footer_icon/icon_newsroom.png"
+                  alt="newsroom"
+                />
+              </a>
+              <a href="#">
+                <img src="./img/main/footer_icon/icon_blog.png" alt="blog" />
+              </a>
+              <a href="#">
+                <img
+                  src="./img/main/footer_icon/icon_youtube.png"
+                  alt="youtube"
+                />
+              </a>
+              <a href="#">
+                <img src="./img/main/footer_icon/icon_instar.png" alt="insta" />
+              </a>
+              <a href="#">
+                <img
+                  src="./img/main/footer_icon/icon_linkedin.png"
+                  alt="linkedin"
+                />
+              </a>
+            </div>
+            <ul class="term_box">
+              <li><a href="#">이메일무단수집거부</a></li>
+              <li><a href="#">개인정보처리방침</a></li>
+            </ul>
+          </div>
+          <ul class="bottom">
+            <li>
+              <span class="subject">주소</span
+              ><span>서울특별시 중구 소월로 3 에티버스타워</span>
+            </li>
+            <li>
+              <span class="subject">대표번호</span><span>02-6004-7000</span>
+            </li>
+            <li>
+              <span class="subject"
+                >Copyright (c) ETEVERS GROUP 2024. All rights reserved.</span
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="right">
+          <ul class="nav_list">
+            <li class="depth1"><a href="#">회사소개</a></li>
+            <li class="depth2"><a href="#">ETEVERS 스토리</a></li>
+            <li class="depth2"><a href="#">CEO 인사말</a></li>
+            <li class="depth2"><a href="#">연혁</a></li>
+            <li class="depth2"><a href="#">CI</a></li>
+          </ul>
+          <ul class="nav_list">
+            <li class="depth1"><a href="#">그룹사소개</a></li>
+            <li class="depth2"><a href="#">에티버스</a></li>
+            <li class="depth2"><a href="#">에티버스이비티</a></li>
+            <li class="depth2"><a href="#">이테크시스템</a></li>
+            <li class="depth2"><a href="#">에티버스이피에이</a></li>
+            <li class="depth2"><a href="#">에티버스소프트</a></li>
+            <li class="depth2"><a href="#">에티버스이앤엘</a></li>
+            <li class="depth2"><a href="#">시소몰</a></li>
+          </ul>
+          <ul class="nav_list">
+            <li class="depth1"><a href="#">PR센터</a></li>
+            <li class="depth2"><a href="#">보도자료</a></li>
+            <li class="depth2"><a href="#">소셜미디어</a></li>
+            <li class="depth2"><a href="#">에티버스 창립 30주년</a></li>
+          </ul>
+          <ul class="nav_list">
+            <li class="depth1"><a href="#">인재채용</a></li>
+            <li class="depth2"><a href="#">인재상</a></li>
+            <li class="depth2"><a href="#">복리후생</a></li>
+            <li class="depth2"><a href="#">채용정보</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <!-- JS -->
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
