feat: 메인페이지 반응형 80% 구현

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <!-- 스크롤 트리거 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-    <!-- 스크롤 트리거 불러오기(플러그인 안정화) -->
-    <script>
-      gsap.registerPlugin(ScrollTrigger);
-    </script>
     <!-- lenis -->
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <!-- 질문할것
@@ -210,6 +206,9 @@
           <div class="text_box">
             <h2 class="sub_title">더 좋은 미래를</h2>
             <h2 class="title">가능하게 하는 혁신</h2>
+          </div>
+          <div class="img_box">
+            <img src="./img/main/section5-1.jpg" alt="section5-1" />
           </div>
           <div class="right_box">
             <p class="text">
