feat: 메인페이지 모바일 네비 80% 완료

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      1. 섹션6 이미지 위치 안맞음
      2. 섹션6 이너 움찔
      3. 새로고침할때 헤더 다시 검은색으로
-      -->
+    -->
   </head>
   <body>
     <div id="cursor">
@@ -82,6 +82,37 @@
       <div class="black_box"></div>
       <div class="black_box second"></div>
     </header>
+    <aside class="nav_mobile_con">
+      <div class="nav_mobile">
+        <div class="head">
+          <a href="#" class="logo_box">
+            <img src="./img/main/logo-blue.png" alt="logo-blue" />
+          </a>
+          <a href="#" class="close_btn">
+            <img src="./img/main/nav-mo-btn-close.png" alt="nav-mo-btn-close" />
+          </a>
+        </div>
+        <div class="lang_box">
+          <a href="#" class="on">KR</a>
+          <a href="#">EN</a>
+        </div>
+        <ul class="menu_list">
+          <li class="depth1">
+            <a class="on" href="#">회사소개</a>
+            <ul class="depth2_list">
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+            </ul>
+          </li>
+          <li class="depth1"><a href="#">회사소개</a></li>
+          <li class="depth1"><a href="#">회사소개</a></li>
+          <li class="depth1"><a href="#">회사소개</a></li>
+        </ul>
+      </div>
+      <div class="black_box"></div>
+    </aside>
     <main>
       <div class="main_line_con">
         <div class="main_line"></div>
