--- a/index.html
+++ b/index.html
@@ -98,7 +98,16 @@
         </div>
         <ul class="menu_list">
           <li class="depth1">
-            <a class="on" href="#">회사소개</a>
+            <a href="#">회사소개</a>
+            <ul class="depth2_list">
+              <li class="depth2"><a href="#">ETEVERS 스토리</a></li>
+              <li class="depth2"><a href="#">CEO 인사말</a></li>
+              <li class="depth2"><a href="#">연혁</a></li>
+              <li class="depth2"><a href="#">CI</a></li>
+            </ul>
+          </li>
+          <li class="depth1">
+            <a href="#">회사소개</a>
             <ul class="depth2_list">
               <li class="depth2"><a href="#">회사소개</a></li>
               <li class="depth2"><a href="#">회사소개</a></li>
@@ -106,9 +115,24 @@
               <li class="depth2"><a href="#">회사소개</a></li>
             </ul>
           </li>
-          <li class="depth1"><a href="#">회사소개</a></li>
-          <li class="depth1"><a href="#">회사소개</a></li>
-          <li class="depth1"><a href="#">회사소개</a></li>
+          <li class="depth1">
+            <a href="#">회사소개</a>
+            <ul class="depth2_list">
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+            </ul>
+          </li>
+          <li class="depth1">
+            <a href="#">회사소개</a>
+            <ul class="depth2_list">
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">회사소개</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
       <div class="black_box"></div>
