feat: 1차 퍼블리싱 완료

--- a/index.html
+++ b/index.html
@@ -107,30 +107,31 @@
             </ul>
           </li>
           <li class="depth1">
-            <a href="#">회사소개</a>
+            <a href="#">그룹사소개</a>
             <ul class="depth2_list">
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">에티버스 </a></li>
+              <li class="depth2"><a href="#">에티버스이비티</a></li>
+              <li class="depth2"><a href="#">이테크시스템</a></li>
+              <li class="depth2"><a href="#">에티버스이피에이</a></li>
+              <li class="depth2"><a href="#">에티버스소프트</a></li>
+              <li class="depth2"><a href="#">에티버스이앤엘</a></li>
+              <li class="depth2"><a href="#">시소몰</a></li>
             </ul>
           </li>
           <li class="depth1">
-            <a href="#">회사소개</a>
+            <a href="#">PR센터</a>
             <ul class="depth2_list">
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">보도자료</a></li>
+              <li class="depth2"><a href="#">소셜미디어</a></li>
+              <li class="depth2"><a href="#">에티버스 창립 30주년</a></li>
             </ul>
           </li>
           <li class="depth1">
-            <a href="#">회사소개</a>
+            <a href="#">인재채용</a>
             <ul class="depth2_list">
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
-              <li class="depth2"><a href="#">회사소개</a></li>
+              <li class="depth2"><a href="#">인재상</a></li>
+              <li class="depth2"><a href="#">복리후생</a></li>
+              <li class="depth2"><a href="#">채용정보</a></li>
             </ul>
           </li>
         </ul>
